<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">随心旅行</string>
    <string name="use_attention">+关注</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_hot">热门</string>
    <string name="use_trip">旅图</string>
    <string name="Backpacking">发布约伴</string>
    <string name="departure">选择出发日期</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="travel_together">旅行约伴</string>
    <string name="ambitus">周边游</string>
    <string name="Tibet">川藏滇青</string>
    <string name="Southeast_Asia">东南亚</string>
    <string name="Japan_Korea_Hongkong_Taiwan">日韩港台</string>
    <string name="western">欧美</string>
    <string name="inland">国内其他</string>
    <string name="overseas">境外其他</string>
    <string name="toddle">随便走走</string>
    <string name="City">同城活动</string>
    <string name="exploring">体验探索</string>
    <string name="sports">运动</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="beer_skittles">酒仙食神</string>
    <string name="performance">演出展览</string>
    <string name="movie">电影天堂</string>
    <string name="grace">优雅生活</string>
    <string name="Other_interests">其他兴趣</string>
    <string name="tv_invite">发约伴</string>
    <string name="tv_showtrip">晒旅途</string>
    <string name="tv_video">拍视频</string>
    <string name="tv_beijing">北京</string>
    <string name="select_hint">搜索目的地</string>
    <string name="hot">推荐</string>
    <string name="local">北京</string>
    <string name="carpooling">约伴</string>
    <string name="samecity">达人</string>
    <string name="open">开启奇妙之旅</string>
    <string name="orderbyhot">热度排序</string>
    <string name="orderbynear">最近出发</string>
    <string name="orderbynewtime">最新发布</string>
    <string name="found">发现</string>
    <string name="attention">关注</string>
    <string name="celebrityrank">达人榜</string>
    <string name="comments">评论</string>
    <string name="more">更多</string>
    <string name="online">在线达人</string>
    <string name="samecityone">同城达人</string>
    <string name="popularitys">人气榜</string>
    <string name="outtime">出行时间</string>
    <string name="actclass">活动类别</string>
    <string name="startingoint">出发地</string>
    <string name="destination">目的地</string>
    <string name="tomorrow">明天</string>
    <string name="thisweek">本周</string>
    <string name="thismonth">本月</string>
    <string name="calendar">日历</string>
    <string name="siftaction">精选活动</string>
    <string name="thisrecommend">本地推荐</string>
    <string name="hottrip">热门旅途</string>
    <string name="nearby">附近约人</string>
    <string name="localdate">活动日历</string>
    <string name="localtourpic">本地旅途</string>
    <string name="cutcity">切换城市</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="praise_vz">赞</string>
    <string name="point_of_departure">出发地</string>
    <string name="lees_destination">目的地(多个目的地用空格隔开)</string>
    <string name="location">请输入您所在城市的某个活动地点</string>
    <string name="pepo">/人</string>
    <string name="leaf">张</string>
    <string name="concerned">已关注</string>
    <string name="tv_rank_name">name</string>
    <string name="tv_rank_description">description</string>
    <string name="vy_handpick">精选活动</string>
    <string name="smssdk_bind_mobile_show">注册</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
    <string name="Being_loaded">正在加载...</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="tv_details">约伴详情</string>
    <string name="Small_new">小新</string>
    <string name="send_vz">发送</string>
    <string name="tv_wel">欢迎使用随心旅行</string>
    <string name="tv_wel_det">为了方便您的使用，进行下一步操作前</string>
    <string name="tv_wel_det_2">请您注册一个随心账号。</string>
    <string name="tv_login">登录</string>
    <string name="tv_regist">注册</string>
    <string name="et_inputtel">请输入您的手机号</string>
    <string name="et_inputpass">输入密码</string>
    <string name="verify_hint">我们已将验证码发送至</string>
    <string name="input_verify">请输入验证码</string>
    <string name="back">上一步</string>

</resources>